# amo-desk

./: README.md
amo-backend/: pyproject.toml
amo-backend/amo_backend/: app.py  config.py  depends.py
amo-backend/amo_backend/repositories/: reference.py  settings_bar.py  topbar.py
amo-backend/amo_backend/routing/: reference.py  settings_bar.py  topbar.py
amo-backend/amo_backend/schemas/: settings_bar.py  topbar.py
amo-backend/amo_backend/services/: reference.py  settings_bar.py  topbar.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  routes.js
frontend/src/api/: API.js
frontend/src/components/: OAuth2Popup.jsx  addRmBtn.js  button.js  dashPanel.js  dashSettings.js  home.js  infoBlock.js  lineParams.js  lineType.js  optionsBlock.js  settingsForm.js  timeInterval.js  topbar.js
frontend/src/config/: conf.js
frontend/src/constants/: host.js
frontend/src/helpers/: useOAuth2.js
frontend/src/styles/: App.css
