[tool.poetry]
name = "amo-backend"
version = "0.1.0"
description = ""
authors = ["Maxim timofeev <id_mtimofeev@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
motor = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "amo_backend.app:start"
